@@ -8,7 +8,7 @@ namespace Herwig {
 using namespace ThePEG;
 
 inline TensorMeson2PScalarDecayer::TensorMeson2PScalarDecayer(const TensorMeson2PScalarDecayer & x)
-  : TensorMesonDecayerBase(x), _incoming(x._incoming), _outgoing1(x._outgoing1),
+  : DecayIntegrator(x), _incoming(x._incoming), _outgoing1(x._outgoing1),
     _outgoing2(x._outgoing2), _coupling(x._coupling), _maxweight(x._maxweight),
     _initsize(x._initsize) {}
 
@@ -20,67 +20,11 @@ inline IBPtr TensorMeson2PScalarDecayer::fullclone() const {
   return new_ptr(*this);
 }
 
-inline void TensorMeson2PScalarDecayer::doupdate() throw(UpdateException) {
-  TensorMesonDecayerBase::doupdate();
-  // First update base class.
-  bool redo = touched();
-  // redo if touched.
-//  UpdateChecker::check(aDependentMember, redo);
-  // Update referenced objects on which this depends redo is set to true
-  // if the dependent object is touched.
-//  for_each(ContainerOfDependencies, UpdateChecker(redo));
-  // Update a container of references.
-//  for_each(MapOfDependencies, UpdateMapChecker(redo));
-  // Update a map of references.
-  if ( !redo ) return;
-  // return if nothing has been touched. Otherwise do the actual update.
-//  touch()
-  // Touch if anything has changed.
-}
-
-inline void TensorMeson2PScalarDecayer::doinit() throw(InitException) {
-  TensorMesonDecayerBase::doinit();
-  // check consistence of the parameters
-  unsigned int isize=_incoming.size();
-  if(isize!=_outgoing1.size()||isize!=_outgoing2.size()||
-     isize!=_maxweight.size()||isize!=_coupling.size())
-    {throw InitException() << "Inconsistent parameters TensorMeson2PScalarDecayer" 
-			   << Exception::abortnow;}
-  // set up the integration channels
-  vector<double> wgt(0);
-  DecayPhaseSpaceModePtr mode;
-  PDVector extpart(3);
-  for(unsigned int ix=0;ix<_incoming.size();++ix)
-    {
-      extpart[0]=getParticleData(_incoming[ix]);
-      extpart[1]=getParticleData(_outgoing1[ix]);
-      extpart[2]=getParticleData(_outgoing2[ix]);
-      mode = new_ptr(DecayPhaseSpaceMode(extpart,this));
-      addMode(mode,_maxweight[ix],wgt);
-    }
-}
-
-inline void TensorMeson2PScalarDecayer::dofinish() {
-  TensorMesonDecayerBase::dofinish();
-}
-
 inline void TensorMeson2PScalarDecayer::doinitrun() {
-  TensorMesonDecayerBase::doinitrun();
+  DecayIntegrator::doinitrun();
   if(initialize())
     {for(unsigned int ix=0;ix<_incoming.size();++ix)
 	{_maxweight[ix] = mode(ix)->maxWeight();}}
-}
-
-inline void TensorMeson2PScalarDecayer::rebind(const TranslationMap & trans)
-  throw(RebindException) {
-  // dummy = trans.translate(dummy);
-  TensorMesonDecayerBase::rebind(trans);
-}
-
-inline IVector TensorMeson2PScalarDecayer::getReferences() {
-  IVector ret = TensorMesonDecayerBase::getReferences();
-  // ret.push_back(dummy);
-  return ret;
 }
 
 }
